Added configuration to save logs. Refactored the code